Project Driveapp {
    database_type: 'mongodb'
    Note: '''
    # DriveApp Database Schema (MongoDB) - Unified Artifactory Version

    A file and media management platform database structure supporting:
    - User authentication and authorization
    - Unified artifactory management (files and folders)
    - Hierarchical organization
    - Secure file access with temporary URLs
    - File metadata tracking

    ## Key Features
    - JWT-based authentication
    - Cloud storage integration (Azure Blob Storage preferred)
    - File type validation and size limits
    - Hierarchical structure with unified artifactory
    - Secure file access URLs with expiration
    - MongoDB-native design with references
    '''
}

// ========================================
// USER MANAGEMENT
// ========================================

Table users {
    _id ObjectId [primary key]
    email string [not null, unique, note: 'User email for authentication']
    password_hash string [not null, note: 'Hashed password using bcrypt']
    full_name string [not null, note: 'User full name']
    avatar_url string [note: 'Optional avatar image URL']
    is_active boolean [not null, default: true, note: 'Account status']
    email_verified boolean [not null, default: false, note: 'Email verification status']
    last_login_at date [note: 'Last login timestamp']
    created_at date [not null, default: `new Date()`]
    updated_at date [not null, default: `new Date()`]

    indexes {
        email [unique]
        created_at [name: 'idx_users_created_at']
    }

    Note: 'Stores user account information and authentication data'
}

Table user_sessions {
    _id ObjectId [primary key]
    user_id ObjectId [not null, ref: > users._id]
    token_hash string [not null, note: 'Hashed JWT token']
    expires_at date [not null, note: 'Token expiration time']
    ip_address string [note: 'IP address of the session']
    user_agent string [note: 'Browser/user agent information']
    is_active boolean [not null, default: true, note: 'Session status']
    created_at date [not null, default: `new Date()`]

    indexes {
        user_id [name: 'idx_user_sessions_user_id']
        token_hash [unique]
        expires_at [name: 'idx_user_sessions_expires_at']
    }

    Note: 'Stores active user sessions for JWT token management'
}

// ========================================
// UNIFIED ARTIFACTORY MANAGEMENT
// ========================================

Table artifactory {
    _id ObjectId [primary key]
    name string [not null, note: 'Name (original_name for files, name for folders)']
    type string [not null, note: 'Type: file or folder']
    user_id ObjectId [not null, ref: > users._id]
    parent_id ObjectId [ref: > artifactory._id, note: 'Parent artifactory for hierarchical structure']
    path string [not null, note: 'Full path from root (e.g., /Documents/Work)']

    // File-specific fields
    server_name string [note: 'Generated server-side file name (files only)']
    mime_type string [note: 'File MIME type (files only)']
    size number [note: 'File size in bytes (files only)']
    access_url string [note: 'Temporary access URL for file download (files only)']
    access_url_expires_at date [note: 'When the access URL expires (files only)']
    storage_path string [note: 'Path in cloud storage (files only)']
    storage_provider string [note: 'Cloud storage provider (files only)']
    checksum string [note: 'File checksum for integrity verification (files only)']
    is_public boolean [note: 'Whether file is publicly accessible (files only)']
    upload_date date [note: 'When file was uploaded (files only)']
    last_accessed_at date [note: 'Last time file was accessed (files only)']

    // Folder-specific fields
    is_root boolean [note: 'Whether this is a root folder (folders only)']

    // Common fields
    created_at date [not null, default: `new Date()`]
    updated_at date [not null, default: `new Date()`]

    indexes {
        user_id [name: 'idx_artifactory_user_id']
        parent_id [name: 'idx_artifactory_parent_id']
        type [name: 'idx_artifactory_type']
        (user_id, path) [unique, name: 'idx_artifactory_user_path_unique']
        (user_id, type) [name: 'idx_artifactory_user_type']
    }

    Note: 'Unified table for files and folders with hierarchical organization'
}

// ========================================
// ARTIFACTORY SHARING & ACCESS CONTROL
// ========================================

Table artifactory_shares {
    _id ObjectId [primary key]
    artifactory_id ObjectId [not null, ref: > artifactory._id]
    shared_by_user_id ObjectId [not null, ref: > users._id, note: 'User who shared the artifactory']
    shared_with_user_id ObjectId [ref: > users._id, note: 'User with whom artifactory is shared (optional)']
    access_token string [unique, note: 'Token for public access']
    access_level string [not null, default: 'read', note: 'read, write, admin']
    expires_at date [note: 'When the share expires']
    is_active boolean [not null, default: true]
    created_at date [not null, default: `new Date()`]

    indexes {
        artifactory_id [name: 'idx_artifactory_shares_artifactory_id']
        shared_by_user_id [name: 'idx_artifactory_shares_shared_by']
        shared_with_user_id [name: 'idx_artifactory_shares_shared_with']
        access_token [unique]
    }

    Note: 'Manages artifactory sharing between users and public access tokens'
}

TableGroup user_management [color: #3498DB, note: 'User authentication and account management'] {
    users
    user_sessions
}

TableGroup artifactory_management [color: #2ECC71, note: 'Unified artifactory storage and organization'] {
    artifactory
    artifactory_shares
}

// ========================================
// NOTES
// ========================================

Note system_notes {
'''
## MongoDB Implementation Notes - Unified Artifactory Version

### Core Features (MVP Requirements)
- User authentication with JWT tokens
- Unified artifactory management (files and folders)
- Hierarchical organization with single table
- File sharing and access control
- Basic file metadata storage

### Unified Artifactory Design
- Single table for both files and folders
- Type field distinguishes between 'file' and 'folder'
- Conditional fields based on type
- Simplified queries and relationships
- Better performance with fewer collections

### Security Considerations
- All passwords are hashed using bcrypt
- JWT tokens are stored as hashes in user_sessions
- File access URLs have expiration times
- User isolation (users can only access their own artifacts)

### Performance Optimizations
- Indexes on frequently queried fields
- Compound indexes for user-specific queries
- Type-specific indexes for filtering
- Efficient hierarchy with path-based queries

### Cloud Storage Integration
- Supports Azure Blob Storage (preferred)
- File metadata stored in MongoDB, actual files in cloud
- Checksum verification for file integrity

### Rate Limiting (Redis)
- Rate limiting handled by Redis (not in MongoDB)
- Temporary access URL caching in Redis
- Upload progress handled in frontend state

### MongoDB Best Practices
- Use ObjectId as primary keys
- Use references (ObjectId) for relationships
- Index frequently queried fields
- Use compound indexes for multi-field queries
- Consider TTL indexes for session expiration

### Benefits of Unified Schema
- Simpler data model
- Easier queries across files and folders
- Better performance with fewer collections
- Consistent API structure
- Reduced complexity in frontend
'''
}
